<resources>
    <string name="app_name">Splitup</string>
    <!-- TODO: Replace with your actual Web Client ID from Firebase Console -->
    <!-- Get it from: Firebase Console > Project Settings > Your apps > Web Client ID -->
    <!-- It should look like: 123456789012-abcdefghijklmnopqrstuvwxyz.apps.googleusercontent.com -->
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>

    <!-- Auth Strings -->
    <string name="sign_in_link">Already have an account? Sign In</string>
    <string name="sign_up_link">Don\'t have an account? Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
</resources>